--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
     <title>Drum Kit</title>
-    <link rel="stylesheet" type="text/css" href="style-drum.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header><h1>Drum Kit</h1></header>
@@ -25,7 +25,7 @@
         <h3>created by : <span>The Great AB</span></h3>
     </footer>
 
-    <script src="script-drum.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
